<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Roots</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Roots</string>
    <string name="nav_header_subtitle">Taking pride in traditional foods.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="preps">Food Preparation</string>
    <string name="additive">Local Additives </string>
    <string name="menu_foods">Food Info</string>
    <string name="menu_share">Share</string>
    <string name="fruits">Indigenous Fruits</string>
    <string name="fermented">Fermented Foods</string>
    <string name="en">English</string>
    <string name="nr">Ndebele</string>
    <string name="sn">Shona</string>
    <string name="cancel">Cancel</string>
    <string name="language_settings">Change Language</string>
    <string name="lang_dialog_title">Choose Language</string>
    <string name="about">About</string>
    <string name="text">Text!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="trad">Traditional Recipes</string>
    <string name="soda">Traditional soda/Utyora</string>
    <string name="hacha">Hacha fruit syrup</string>
    <string name="pumpkin">Pumpkin seed oil</string>
    <string name="tsunga_seeds">Tsunga seeds oil</string>
    <string name="peanut">Peanut butter</string>
    <string name="baobab">Baobab seeds</string>
    <string name="legume_flour">Legume flour</string>
    <string name="credits">Credits</string>
    <string name="eula">License Agreement</string>
    <string name="policy">Privacy Policy</string>
    <string name="license">Software License Agreement</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="privacy">"Roots App collects information about you and uses this information to help improve your experience on the app and connect you with services that are relevant to you. This policy describes how your information is collected and used and your choices with respect to your personal information. This policy applies to information we collect or use on sites and applications owned or controlled by Roots App (Muriwo WeDzimbahwe). Roots App is not for the privacy policies or practices of ad networks and other websites, third parties with whom we work to provide you personalised services, or those who access your information on our sites or applications.
        \nInfo we collect
        \nWe collect information about you when you use Roots App. We collect information directly from you such as your contact information and profile information. We also collect information about you automatically such as how you use and interact with Roots App, your demographic information and information about your computer or mobile device. We may collect or use information about you from publicly available websites whether or not you have an account with us. You will have the opportunity to claim, change the visibility setting of, or remove the information. However, we cannot guarantee that we will not later collect from public-available websites other information that pertains to you. We may also acquire information about you from third parties to further personalise and enhance your experience.
        \nHow we use Information
        \nWe use the information we collect about you to deliver the products and services we offer, respond to you and operate and improve our sites and application. Our services include showing you personalised content and advertising on Roots App or other sites which we have a business relationship. We may use your information to contact you about Roots App updates, conduct surveys or to provide informational and service-related communications, including important security updates. Information you share in public areas of Roots App or make visible in the resume and profile database may be accessed, used and stored by others around the world. We strive to provide a safe environment by attempting to limit access to our database to legitimate users, but we cannot guarantee that unauthorised parties will not gain access. We also cannot control how authorised users store or transfer information you give to us, so you should not post sensitive information to Roots App.\n
        \nHow we share Information
        \nWe do not share contact information with third parties for their direct marketing purposes without your consent. We share your information with third parties who help us to deliver our products and services to you. These third parties may not use your information for any other purpose. We may share information with third parties if you consent. For example, we may use your information to contact you about products or services available from Roots App. If you opt in, we may supply your information to third parties who may contact you about their products and services. You may change your contact preferences by adjusting your notification settings. We may disclose to third parties information that we have collected from other websites. We disclose information where legally required. We may disclose and transfer information to a third party who acquires any or all of Roots' business units.
        \nHow we store Information
        \nWe store your information to make your interaction with Roots App more efficient, practical, and relevant. You may access, review, correct, update, or delete your profile anytime by signing in to your account. If you do not have an account, please contact us. When you delete your personal information, we will retain logs and non-personal information about your activity on Roots App. We will also retain an archival copy of your information which is not accessible by you or third parties on the internet. If your personal information was previously accessed by others using Roots App, we are unable to delete the information from their systems. Roots App is not intended for children under 13 years of age. We use cookies to help personalise and maximise your experience on Roots App. You may turn off cookies, however this will adversely affect your use of Roots App.
        \nContact Information
        \nYou may write to us info@muriwo.com"
    </string>
    <string name="thanks">AMAZING THANKS FOR SHARING CONTENT!</string>
    <string name="copy">Copyright Credits</string>
    <string name="none" />
    <string name="licenses" tools:ignore="TypographyOther"> "END-USER LICENSE AGREEMENT FOR ROOTS APP\n
        \nIMPORTANT PLEASE READ THE TERMS AND CONDITIONS OF THIS LICENSE AGREEMENT CAREFULLY\n
        \nMuriwo WeDzimbahwe\'s End-User License Agreement ("EULA") is a legal agreement between you (either an individual or a single entity) and Muriwo WeDzimbabwe.
        \nMuriwo WeDzimbahwe\'s software product identified above which may include associated software components, media, printed materials and "online" or electronic document are referred as "SOFTWARE PRODUCT".
        \nBy installing, copying or otherwise using the SOFTWARE PRODUCT, you agree to be bound by the terms of this EULA. This license agreement represents the entire agreement concerning the program between you and Muriwo WeDzimbahwe, (referred to as "license"), and it supersedes any prior proposal, representation, or understanding between parties. If you do not agree to the terms of this EULA do uninstall or do not use the SOFTWARE PRODUCT.
        \nThe SOFTWARE PRODUCT is protected by copyright laws and international copyright treaties, as well as other intellectual property laws and treaties.
        \n1. GRANT OF LICENSE
        \nThe SOFTWARE PRODUCT is licensed as follows:
        \n(a)Installation and Use
        \nMuriwo WeDzimbahwe grants you the right to install and use copies of the SOFTWARE PRODUCT on your mobile running a validly licensed copy of the operating system for which the SOFTWARE PRODUCT was designed e.g. Android
        \n2. DESCRIPTION OF OTHER RIGHTS AND LIMITATIONS
        \n(a) Maintenance of Copyright Notices
        \nYou must not remove or alter any copyright notices on any and all copies of the SOFTWARE PRODUCT.
        \n(b) Prohibition on Reverse Engineering, Decompilation, and Disassembly.
        \nYou may not reverse engineer, decompile, or disassemble the SOFTWARE PRODUCT, except and only to the extent that such activity is expressively permitted by applicable law notwithstanding this limitation.
        \n(c) Rental
        \nYou may not rent, lease, or lend the SOFTWARE PRODUCT.
        \n(d) Compliance with Applicable Laws.
        \nYou must comply with all applicable laws regarding use of the SOFTWARE PRODUCT.
        \n3. TERMINATION
        \nWithout prejudice to any other rights, Muriwo WeDzimbahwe may terminate this EULA if you fail to comply with the terms and conditions of this EULA. In such event, you must destroy all copies of the SOFTWARE PRODUCT in your possession.
        \n4. COPYRIGHT
        \nAll title including but not limited to copyrights, in and to the SOFTWARE PRODUCT and any copies thereof are owned by Muriwo WeDzimbahwe or its suppliers.
        \nAll title and intellectual property rights in and to the content which may be accessed through use of the SOFTWARE PRODUCT is the property of the respective content owner and may be protected by applicable copyright or other intellectual property laws and treaties.
        \nThis EULA grants you no rights to use such content.
        \nAll rights not expressly granted are reserved by Muriwo WeDzimbahwe.
        \n5. NO WARRANTIES
        \nMuriwo WeDzimbahwe expressly disclaims any warranty for the SOFTWARE PRODUCT. The SOFTWARE PRODUCT is provided "As Is" without any express or implied warranty of any kind, including but not limited to any warranty of any kind, including but not limited to any warranties of merchantability, noninfingement, or fitness of a particular purpose.
        \nMuriwo WeDzimbahwe makes no warranties respecting any harm that may be caused by the transmission of a computer virus, worm, time bomb, logic bomb, or other such computer program. Muriwo WeDzimbahwe further expressly disclaims any warranty or representation to Authorised Users or to any third party.
        \n6. LIMITATION OF LIABILITY
        \nIn no event shall Muriwo WeDzimbahwe be liable for any damages (including, without limitation, lost profits, business interruption, or lost information) rising out of Authorised Users' use of or inability to use the SOFTWARE PRODUCT, even if Muriwo WeDzimbahwe has been advised of the possibility of such damages.
        \nIn no event will Muriwo WeDzimbahwe be liable for loss of data or for indirect, special, incidental, consequential (including lost profit), or other damages based in contract, tort or otherwise.
        \nMuriwo WeDzimbahwe shall have no liability with respect to the content of the SOFTWARE PRODUCT or any part thereof, including but not limited to errors or omissions contained therein, libel, infringements of rights of publicity, privacy, trademark, moral rights or the disclosure of confidential information."
    </string>
    <string name="credit">
        "Consumption of Indigenous foods in Zimbabwe: USER’S GUIDE AND RECIPE BOOK by Community Technology Development Trust (CTDT).
        \nNhopi by Naturally Zimbabwean http://naturallyzimbabwean.com/wp-content/uploads/2016/09/nhopi.jpg/
        \nFinger Millet by Naturally Zimbabwean http://naturallyzimbabwean.com/wp-content/uploads/2016/09/finger-millet-zviyo.jpg/"
    </string>
    <string name="ob_get_started">GET STARTED</string>
    <string name="ob_header1">Traditional Recipes</string>
</resources>