<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.elisvobs.roots.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_additive"
        android:name="com.elisvobs.roots.ui.additive.AdditiveFragment"
        android:label="@string/additive"
        tools:layout="@layout/fragment_additive" />
    <fragment
        android:id="@+id/nav_preps"
        android:name="com.elisvobs.roots.ui.preps.PrepsFragment"
        android:label="@string/preps"
        tools:layout="@layout/fragment_preps" />
    <fragment
        android:id="@+id/nav_fermented"
        android:name="com.elisvobs.roots.ui.fermented.FermentedFragment"
        android:label="@string/fermented"
        tools:layout="@layout/fragment_fermented" />
    <fragment
        android:id="@+id/nav_fruit"
        android:name="com.elisvobs.roots.ui.fruit.FruitFragment"
        android:label="@string/fruits"
        tools:layout="@layout/fragment_fruit" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.elisvobs.roots.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
</navigation>